cmake_minimum_required(VERSION 3.3)
project(FlappyRectangle)
set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${project_SOURCE_DIR}/cmake")
add_definitions(-std=gnu++0x)
add_executable(FlappyRectangle main.cpp barrier.cpp capp.cpp cplayer.cpp timer.cpp)
include(FindPkgConfig)
PKG_SEARCH_MODULE(SDL2 REQUIRED sdl2)
include_directories(${SDL2_INCLUDE_DIRS})
target_link_libraries(FlappyRectangle ${SDL2_LIBRARIES})