cmake_minimum_required(VERSION 3.0)
project(FlappyRectangle)
set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake")
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR})
add_definitions(-std=gnu++0x)
add_executable(FlappyRectangle main.cpp barrier.cpp capp.cpp cplayer.cpp timer.cpp board.h board.cpp)
include(FindPkgConfig)
PKG_SEARCH_MODULE(SDL2 REQUIRED sdl2)
PKG_SEARCH_MODULE(SDL2_ttf REQUIRED SDL2_ttf)
include_directories(${SDL2_INCLUDE_DIRS})
target_link_libraries(FlappyRectangle ${SDL2_LIBRARIES} ${SDL2_ttf_LIBRARIES})
